--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1,4 +1,4 @@
-/*! Congo v2.4.2 | MIT License | https://github.com/jpanther/congo */
+/*! Congo v2.5.2 | MIT License | https://github.com/jpanther/congo */
 
 /*! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com */
 
@@ -552,6 +552,11 @@ video {
   max-width: 65ch;
 }
 
+.prose :where(p):not(:where([class~="not-prose"] *)) {
+  margin-top: 1.25em;
+  margin-bottom: 1.25em;
+}
+
 .prose :where([class~="lead"]):not(:where([class~="not-prose"] *)) {
   color: var(--tw-prose-lead);
   font-size: 1.25em;
@@ -912,11 +917,6 @@ video {
   line-height: 1.75;
 }
 
-.prose :where(p):not(:where([class~="not-prose"] *)) {
-  margin-top: 1.25em;
-  margin-bottom: 1.25em;
-}
-
 .prose :where(video):not(:where([class~="not-prose"] *)) {
   margin-top: 2em;
   margin-bottom: 2em;
@@ -1054,7 +1054,8 @@ body button {
 /* Hamburger menu */
 
 body:has(#menu-controller:checked) {
-  overflow-y: hidden;
+  height: 100vh;
+  overflow: hidden;
 }
 
 #menu-button:has(#menu-controller:checked) {
@@ -1207,64 +1208,37 @@ body:has(#menu-controller:checked) {
 
 /* Background */
 
-.prose .chroma {
-  position: static;
+.chroma {
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
   background-color: rgba(var(--color-neutral-50), var(--tw-bg-opacity));
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
   --tw-text-opacity: 1;
   color: rgba(var(--color-neutral-700), var(--tw-text-opacity));
 }
 
-.dark .prose .chroma {
+.dark .chroma {
   --tw-bg-opacity: 1;
   background-color: rgba(var(--color-neutral-700), var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgba(var(--color-neutral-200), var(--tw-text-opacity));
 }
 
-/* LineTableTD */
-
-.chroma .lntd,
-.chroma .lntd pre {
+.chroma pre {
   margin: 0px;
-  overflow: hidden;
-  border-style: none;
   padding: 0px;
-  vertical-align: top;
 }
 
 /* LineTable */
 
 .chroma .lntable {
+  margin: 0px;
   display: block;
   width: auto;
-  overflow-x: auto;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+  overflow: auto;
   font-size: 1rem;
   line-height: 1.5rem;
-  border-spacing: 0;
-}
-
-/* LineTable Line */
-
-.chroma .lntable .line {
-  padding-right: 1rem;
-}
-
-/* LineHighlight */
-
-.chroma .hl {
-  display: block;
-  width: auto;
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--color-primary-100), var(--tw-bg-opacity));
-}
-
-.dark .chroma .hl {
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--color-primary-900), var(--tw-bg-opacity));
 }
 
 /* LineNumbersTable */
@@ -1273,11 +1247,9 @@ body:has(#menu-controller:checked) {
 
 .chroma .lnt,
 .chroma .ln {
-  margin-right: 0.4em;
-  padding-left: 0.4em;
-  padding-right: 0.4em;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  margin-right: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   --tw-text-opacity: 1;
   color: rgba(var(--color-neutral-600), var(--tw-text-opacity));
 }
@@ -1286,6 +1258,29 @@ body:has(#menu-controller:checked) {
 .chroma .ln {
   --tw-text-opacity: 1;
   color: rgba(var(--color-neutral-300), var(--tw-text-opacity));
+}
+
+.chroma .lntd {
+  padding: 0px;
+  vertical-align: top;
+}
+
+.chroma .lntd:last-of-type {
+  width: 100%;
+}
+
+/* LineHighlight */
+
+.chroma .hl {
+  display: block;
+  width: 100%;
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--color-primary-100), var(--tw-bg-opacity));
+}
+
+.dark .chroma .hl {
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--color-primary-900), var(--tw-bg-opacity));
 }
 
 /* Keyword */
@@ -1893,6 +1888,10 @@ body:has(#menu-controller:checked) {
   margin-top: -1rem;
 }
 
+.-mt-3 {
+  margin-top: -0.75rem;
+}
+
 .mb-\[2px\] {
   margin-bottom: 2px;
 }
@@ -1949,6 +1948,10 @@ body:has(#menu-controller:checked) {
   height: 9rem;
 }
 
+.max-h-\[4\.5rem\] {
+  max-height: 4.5rem;
+}
+
 .max-h-\[10rem\] {
   max-height: 10rem;
 }
@@ -1999,6 +2002,10 @@ body:has(#menu-controller:checked) {
 
 .max-w-prose {
   max-width: 65ch;
+}
+
+.max-w-\[6rem\] {
+  max-width: 6rem;
 }
 
 .max-w-\[10rem\] {
@@ -2517,6 +2524,10 @@ body:has(#menu-controller:checked) {
   font-style: italic;
 }
 
+.leading-relaxed {
+  line-height: 1.625;
+}
+
 .leading-6 {
   line-height: 1.5rem;
 }
@@ -2621,6 +2632,12 @@ body:has(#menu-controller:checked) {
 
 .transition-transform {
   transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -2789,6 +2806,14 @@ body:has(#menu-controller:checked) {
 
 .group:hover .group-hover\:decoration-primary-500 {
   text-decoration-color: rgba(var(--color-primary-500), 1);
+}
+
+.group:hover .group-hover\:decoration-2 {
+  text-decoration-thickness: 2px;
+}
+
+.group:hover .group-hover\:underline-offset-2 {
+  text-underline-offset: 2px;
 }
 
 .group:hover .group-hover\:opacity-100 {
@@ -3175,12 +3200,20 @@ body:has(#menu-controller:checked) {
     display: none;
   }
 
+  .sm\:max-h-\[7\.5rem\] {
+    max-height: 7.5rem;
+  }
+
   .sm\:w-40 {
     width: 10rem;
   }
 
   .sm\:w-1\/2 {
     width: 50%;
+  }
+
+  .sm\:max-w-\[10rem\] {
+    max-width: 10rem;
   }
 
   .sm\:flex-row {
